z-index fixed at side menu wrapper

--- a/src/assets/styles/components/common/SideMenu.sass
+++ b/src/assets/styles/components/common/SideMenu.sass
@@ -7,6 +7,7 @@
   position: fixed
   background-color: map-get($sideMenuColors, background)
   min-height: 100vh
+  z-index: 100
   min-width: $sideMenuWidth
 
   >header
